2009-11-20  Kaz Kylheku  <kkylheku@gmail.com>

	* match.c (dest_bind): Extended to handle more general forms
	by using eval_form rather than direct symbol binding lookups.
	False positive return fixed.
	(match_line): Fixed merge to use eval_from
	rather than direct symbol binding.

2009-11-20  Kaz Kylheku  <kkylheku@gmail.com>

	* lib.c (flatten): Semantics change. The flatten function
	should not map nil -> (nil), but nil -> nil.

2009-11-20  Kaz Kylheku  <kkylheku@gmail.com>

	Changing ``obj_t *'' occurences to a ``val'' typedef. (Ideally,
	we wouldn't have to declare object variables at all, so why
	use an obtuse syntax to do so?)

	* lib.h (val): New typedef name. Used throughout.

	* gc.c, gc.h, hash.c, hash.h, lib.c, match.c, match.h, parser.h,
	parser.l, parser.y, regex.c, regex.h stream.c,, stream.h, txr.c,
	unwind.c, unwind.h: Replace obj_t * with val almost everywhere.
	Low-level gc functinos that work with arrays of obj_t use
	obj_t *. Seeing pointer arithmetic on a val doesn't make sense.
	In macros we use obj_t *, to reduce the chances of clashing
	with some local variable called val.

2009-11-19  Kaz Kylheku  <kkylheku@gmail.com>

	* txr.1: Fixed mangled formatting of exception handling example.

2009-11-19  Kaz Kylheku  <kkylheku@gmail.com>

	Get rid of macros in favor of safer inline functions. 

	The recent auto_str("byte str") error could have been caught
	at compile time.

	* Makefile (CFLAGS): Include expansion of INLINE_FLAGS.

	* configure (inline_flags): New variable.
	(INLINE_FLAGS): New variable generated in config.make.

	* lib.h (tag, is_ptr, is_num, is_chr, is_lit, type,
	auto_str, static_str, litptr): Function-like macros converted to
	functions.

2009-11-19  Kaz Kylheku  <kkylheku@gmail.com>

	Version 024

	Fixed show-stopper breakage in parse error diagnostic function.

	Fixed bug introduced back in 015: collects that don't yield
	any variable bindings being wrongly treated as failed.

	* txr.c (version): Bumped to 024.
